# cook-lib-rs

./: .gitignore  .pubignore  CLAUDE.md  README.md  justfile  pubspec.yaml
.github/workflows/: release.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/integration_test/: plugin_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/pages/: transcribe_demo_page.dart  video_frame_extractor_page.dart
example/test/: widget_test.dart
ios/: cook_lib.podspec
ios/Classes/: AudioDecoder.swift  CookLibPlugin.swift  VideoFrameExtractor.swift
ios/Frameworks/cook_lib.xcframework/: Info.plist
lib/: cook_lib.dart
lib/src/: audio_processor.dart  init.dart  native_decoder.dart  video_processor.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  (+1 more)
rust/: Cargo.toml  build.rs
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: audio.rs  frame_extractor.rs  mod.rs  video.rs  xhs.rs
rust/src/api/models/: mod.rs  xhs.rs
rust/src/core/: audio_error.rs  audio_utils.rs  mod.rs  ncnn_handler.rs  ncnn_vad.rs
rust/src/core/audio/: error.rs  handler.rs  mod.rs  utils.rs  vad.rs
rust/src/core/video/: deduplicator.rs  diff_filter.rs  frame.rs  manager.rs  mod.rs  pipeline.rs  text_detector.rs
rust/src/core/xhs/: AGENTS.md  mod.rs  parser.rs
rust/src/frame_extractor/: deduplicator.rs  diff_filter.rs  mod.rs  pipeline.rs  state_machine.rs  text_detector.rs
(+20 files in other folders)
