[package]
name = "cook_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
scraper = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
json5 = "1.3"
regex = "1.10"
hound = "3"
rubato = "0.14"
once_cell = "1.19"
num_cpus = "1.0"
log = "0.4"
android_logger = "0.14"
# 图像处理 - 用于视频抽帧
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "bmp"] }
# 用于 pHash DCT 计算
rustdct = "0.7"
# 并行处理
rayon = "1.10"
# sherpa-ncnn ASR and VAD
sherpa-ncnn = { git = "https://github.com/aooohan/sherpa-ncnn-rs", default-features = false }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
